--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>智障ㄟ哎</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta property="og:image" content="./assets/ask.png" />
   </head>
   <body>
     <div id="app">
